# IML_reliability

./: .mlp_reg_0.h5.icloud  .mlp_reg_1.h5.icloud  .mlp_reg_2.h5.icloud  .setup.cfg.icloud  README.md  checkdl.ipynb  mlp_reg_0.h5  mlp_reg_0.json  mlp_reg_1.h5  mlp_reg_1.json  mlp_reg_2.h5  pyproject.toml  requirements.txt  setup.py  turotial_classification.ipynb  turotial_dimension_reduction.ipynb  turotial_fi_clus.ipynb  turotial_fi_dr.ipynb  turotial_fi_reg.ipynb  turotial_regression.ipynb
.ipynb_checkpoints/: .turotial_regression-Copy1-checkpoint.ipynb.icloud  turotial_classification-checkpoint 2.ipynb  turotial_clustering-checkpoint.ipynb  turotial_dimension_reduction-checkpoint.ipynb  turotial_fi_class-checkpoint.ipynb  turotial_fi_clus-checkpoint.ipynb  turotial_fi_reg-checkpoint.ipynb  turotial_regression-checkpoint.ipynb
IML_reliability.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
imlreliability/: __init__.py
imlreliability/clustering/: _clustering.py  util_clustering.py
imlreliability/dimension_reduction/: _dimension_reduction.py  util_dr.py
imlreliability/feature_importance/: __init__.py  _feature_impo.py  util_feature_impo.py
tests/: .turotial.ipynb.icloud  Untitled.ipynb  consis_test_fi_class.csv  mlp_0.h5  mlp_0.json  mlp_1.h5  mlp_1.json  mlp_2.h5  test_clustering.py  test_dr.py  test_feature_impo.py  turotial.ipynb  turotial_fi_class.ipynb
tests/.ipynb_checkpoints/: .turotial-checkpoint.ipynb.icloud  (+2 more)
tutorial/: turotial_classification.ipynb  turotial_clustering.ipynb  turotial_dimension_reduction.ipynb  turotial_regression.ipynb
