[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IML_reliability"
version = "0.1"
authors = [
  { name="Luqin Gan", email="glq.gan@gmail.com" },
]
description = "Reliability Study on Interpretations of Interpretable Machine Learning Model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/IML_reliability"
"Dashboard" = "https://iml-reliability.herokuapp.com/home"

